# github-mcp-server

./: .env  .gitignore  README.md  client.py  githubserver.py  main.py  mathserver.py  pyproject.toml  requirement.txt  tempCodeRunnerFile.py  weatherserver.py
